ingress_grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress-grafana
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - ikip.cloud
    secretName: ikip-cloud-tls
  rules:
  - host: ikip.cloud
    http:
      paths:
      - path: /grafana/(.*)
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
